<resources>
    <string name="app_name">CinemaBookingApp</string>
    <string name="title_cinemago">CinemaGo</string>
    <string name="welcome_back">Chào mừng quay trở lại</string>
    <string name="subtitle_signin">Đăng nhập vào phòng chiếu riêng của bạn</string>
    <string name="hint_email">Địa chỉ Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="btn_login">ĐĂNG NHẬP</string>
    <string name="txt_or">HOẶC</string>
    <string name="btn_google">Tiếp tục với Google</string>
    <string name="msg_no_account">Chưa có tài khoản? </string>
    <string name="btn_register">Đăng ký</string>

    <string name="desc_app_logo">Logo ứng dụng</string>
    <string name="desc_google_icon">Logo Google</string>
    <string name="header_welcome">Hello, Nhan 👋</string>
    <string name="header_subtitle">Find your favorite movie</string>

    <string name="search_hint">Tìm kiếm phim...</string>

    <string name="banner_title">Interstellar 2</string>
    <string name="banner_info">Khoa học viễn tưởng • 2 giờ 45 phút</string>
    <string name="btn_book_now">Đặt Vé Ngay -></string>

    <string name="category_action">Hành Động</string>
    <string name="category_horror">Kinh Dị</string>
    <string name="category_anime">Anime</string>

    <string name="section_now_showing">Phim Đang Chiếu</string>
    <string name="btn_see_all">Xem Tất Cả</string>

    <string name="movie_1_title">Shadow Realm</string>
    <string name="movie_1_info">Giật gân • 2 giờ 10 phút</string>
    <string name="movie_1_rating">⭐ 4.8</string>

    <string name="movie_2_title">Neon Pulse</string>
    <string name="movie_2_info">Khoa học viễn tưởng • 1 giờ 55 phút</string>
    <string name="movie_2_rating">⭐ 4.5</string>

    <string name="title_create_account">Tạo Tài Khoản</string>
    <string name="subtitle_register">Đặt vé phim yêu thích của bạn dễ dàng</string>
    <string name="hint_full_name">Họ Và Tên</string>

    <string name="hint_confirm_password">Xác Nhận Mật Khẩu</string>
    <string name="text_terms">Tôi đồng ý với Điều Khoản &amp; Điều Kiện</string>
    <string name="btn_create_account">TẠO TÀI KHOẢN</string>
    <string name="text_or">HOẶC TIẾP TỤC VỚI</string>

    <string name="text_already_have_account">Đã có tài khoản? Đăng Nhập</string>
    <string name="desc_logo">Logo Cinephile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>